# br-real-estate-funds-analysis

./: .editorconfig  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/constants/: storage_constants.py
src/cvm/: constants.py  cvm_api.py  cvm_extraction_service.py  cvm_factory.py  cvm_parsing_service.py
src/pages/: funds.py  get_data.py  home.py
src/reporting/: reporting_factory.py  reporting_service.py
src/reporting/constants/: filters.py
src/status_invest/: __init__.py  constants.py  status_invest_api.py  status_invest_extraction_service.py  status_invest_factory.py  status_invest_parsing_service.py
src/status_invest/dto/: advanced_search_response_dto.py
src/storage/: __init__.py  local_storage_service.py  zip_file_service.py
src/storage/interfaces/: storage_service_interface.py
src/utils/: date_utils.py
